Исправлена ошибка с уникальным ID в коллекции компонентов. Исправлена функция вызова запросов

--- a/src/components/card-list/card-list.module.scss
+++ b/src/components/card-list/card-list.module.scss
@@ -5,3 +5,14 @@
     margin: 0 auto;
     position: relative;
 }
+
+.Card {
+    list-style: none;
+    padding: 20px;
+    border-radius: 8px;
+    width: 466px;
+    height: 164px;
+    background-color: #fff;
+    margin: 20px 0;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.10);
+}
